Adds sign-in-with-github

--- a/app/views/pages/index.haml
+++ b/app/views/pages/index.haml
@@ -1,1 +1,1 @@
-= link_to 'Sign-in with Github', user_omniauth_authorize_path(:github), class: 'btn'
+= link_to 'Sign-in with Github', user_omniauth_authorize_path(:github), class: 'button'
